# Movie-Recommender-System

./: .gitignore  Dockerfile  Movies_Recommender_Sysytem.ipynb  README.md  app.py  pyproject.toml
backend/: api.py
frontend/: index.html
