[project]
name = "movie-recommender-system"
version = "0.1.0"
description = "movie-recommender-system project using content based"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "gradio (>=6.12.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"