[tool.poetry]
name = "movie-recommender-system"
version = "0.1.0"
description = "movie recommender"
authors = ["omar <omer.mohamed.mahrous@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
pandas = "^2.0.0"
scikit-learn = "^1.8.0"
gradio = "^6.12.0"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"